[package]
name = "tasktui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
crossterm = "0.27"
ratatui = "0.26"
sqlx = { version = "0.7", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "macros",
  "chrono",
] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
clap = { version = "4", features = ["derive"] }
